--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
-  "main": "./server.js",
+  "main": "server.js",
   "engines": {
     "node": "14.16.0",
     "npm": "6.14.11"
@@ -22,7 +22,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "build": "^0.1.4",
+    "if-env": "^1.0.4",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
