--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "build": "^0.1.4",
-    "if-env": "^1.0.4",
-    "serve": "^11.3.2"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
