--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "engines": {
-    "node": "14.16.0",
-    "npm": "6.14.11"
-  },
+  "main": "server/server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "cd server && npm start",
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -22,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "build": "^0.1.4",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
